--- a/MainHome.html
+++ b/MainHome.html
@@ -52,13 +52,13 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
       </div> 
     </div>
     <div class="w3-display-container mySlides">
-      <img src="/FINALS PROJECT/Broadband.jpg" style="width:100%">
+      <img src="Broadband.jpg" style="width:100%">
       <div class="w3-display-middle w3-container w3-padding-32">
         <span class="w3-white w3-padding-large w3-animate-bottom">Internet</span>
       </div>
     </div>
     <div class="w3-display-container mySlides">
-      <img src="/FINALS PROJECT/tech.jpg" style="width:100%">
+      <img src="tech.jpg" style="width:100%">
       <div class="w3-display-topright w3-container w3-padding-32">
         <span class="w3-white w3-padding-large w3-animate-bottom">Connection</span>
       </div>
