--- a/5G Info Page.html
+++ b/5G Info Page.html
@@ -29,7 +29,7 @@ img {margin-bottom: -8px;}
      
 
         
-        <img src="/FINALS PROJECT/5g world.jpg" class="w3-image w3-margin-top" width="335" height="471">
+        <img src="5g world.jpg" class="w3-image w3-margin-top" width="335" height="471">
       </div>
     </div>
   </div>
@@ -41,7 +41,7 @@ img {margin-bottom: -8px;}
 <div class="w3-padding-64 w3-light-grey">
   <div class="w3-row-padding">
     <div class="w3-col l4 m6">
-      <img class="w3-image w3-round-large w3-hide-small w3-grayscale" src="/FINALS PROJECT/5g.jpg" alt="App" width="335" height="471">
+      <img class="w3-image w3-round-large w3-hide-small w3-grayscale" src="5g.jpg" alt="App" width="335" height="471">
     </div>
     <div class="w3-col l8 m6">
       <h1 class="w3-jumbo"><b>Which is better 5g Or 4g?</b></h1>
