Update internet info page.html

--- a/internet info page.html
+++ b/internet info page.html
@@ -47,7 +47,7 @@
 
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="/FINALS PROJECT/internet.jpg.crdownload" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <img src="internet.jpg.crdownload" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
     <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Internet speed test</button>
   </div>
@@ -79,25 +79,25 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="/FINALS PROJECT/at&a" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="at&a" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>AT&T Internet</h3>
   <p></p>
 </div>
 
 <div class="w3-quarter">
-  <img src="/FINALS PROJECT/spectrum.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="spectrum.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Spectrum Internet</h3>
   <p></p>
 </div>
 
 <div class="w3-quarter">
-  <img src="/FINALS PROJECT/frontier" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="frontier" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Frontier Internet</h3>
   <p></p>
 </div>
 
 <div class="w3-quarter">
-  <img src="/FINALS PROJECT/xfinoty" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="xfinoty" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Xfinity Internet</h3>
   <p></p>
 </div>
