Update internet info page.html

--- a/internet info page.html
+++ b/internet info page.html
@@ -200,7 +200,7 @@
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
   <a class="w3-button w3-large w3-teal w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-  <p>Home <a href="file:///F:/FINALS%20PROJECT/Main%20Home%20.html" target="_blank">Page</a></p>
+  <p>Home <a href="file:///F:/https://andrewle1234.github.io/MainHome.html" target="_blank">Page</a></p>
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
     <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>   
