--- a/cyber security.html
+++ b/cyber security.html
@@ -187,25 +187,25 @@ theft of or damage to their hardware, software, or electronic data
         </div>
         <ul class="w3-ul w3-hoverable w3-white">
           <li class="w3-padding-16">
-            <img src="/FINALS PROJECT/Apple-logo.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="Apple-logo.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Apple</span>
             <br>
             <span>Technology Company</span>
           </li>
           <li class="w3-padding-16">
-            <img src="/FINALS PROJECT/google-logo.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="google-logo.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Google</span>
             <br>
             <span>cloud computing, software, and hardware.</span>
           </li>
           <li class="w3-padding-16">
-            <img src="/FINALS PROJECT/lg.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="lg.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">LG</span>
             <br>
             <span> home appliances including refrigerators, washing machines,microwave ovens</span>
           </li>
           <li class="w3-padding-16">
-            <img src="/FINALS PROJECT/microsoft.jpg" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px">
+            <img src="microsoft.jpg" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px">
             <span class="w3-large">Microsoft</span>
             <br>
             <span>technology corporation which produces computer software</span>
