Update 5G Info Page.html

--- a/5G Info Page.html
+++ b/5G Info Page.html
@@ -125,7 +125,7 @@ img {margin-bottom: -8px;}
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  <p class="w3-medium">Home  <a href="" target="_blank" class="w3-hover-text-green">Page</a></p>
+ <p>Home <a href="file:///F:/https://andrewle1234.github.io/MainHome.html" target="_blank">Page</a></p>
 </footer>
 
 <script>
