--- a/cyber security.html
+++ b/cyber security.html
@@ -36,7 +36,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Image header -->
   <header class="w3-display-container w3-wide" id="home">
-    <img class="w3-image" src="/FINALS PROJECT/cyber.jpg" alt="Fashion Blog" width="1600" height="1060">
+    <img class="w3-image" src="cyber.jpg" alt="Fashion Blog" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-text-white"></h1>
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>How Cyber Security works</b></h1>
@@ -58,7 +58,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
 
         <div class="w3-justify">
-          <img src="/FINALS PROJECT/security.jpg" alt="Girl Hat" style="width:100%" class="w3-padding-16">
+          <img src="security.jpg" alt="Girl Hat" style="width:100%" class="w3-padding-16">
           <p><strong></strong> Cyber security is the application of technologies, 
 		  processes and controls to protect systems, networks, programs, devices and data from cyber attacks. It aims to reduce the risk of 
 		  cyber attacks and protect against the unauthorised exploitation of systems, networks and technologies. Computer security, cybersecurity, or information technology security is the protection of computer systems and networks from information disclosure, 
@@ -87,7 +87,7 @@ theft of or damage to their hardware, software, or electronic data
         </div>
 
         <div class="w3-justify">
-          <img src="/FINALS PROJECT/network.jpg" alt="" style="width:100%" class="w3-padding-16">
+          <img src="network.jpg" alt="" style="width:100%" class="w3-padding-16">
           <p><strong></strong> </p>
           <p>Network security is one of the most important aspects to consider when working over the internet, LAN or other method, no matter how small or big your business is.
 		  Network security helps protect your workstations from harmful spyware. It also ensures that shared data is kept secure.</p>
@@ -127,7 +127,7 @@ theft of or damage to their hardware, software, or electronic data
         </div>
 
         <div class="w3-justify">
-          <img src="/FINALS PROJECT/cloud.jpg" alt="" style="width:100%" class="w3-padding-16">
+          <img src="cloud.jpg" alt="" style="width:100%" class="w3-padding-16">
           <p><strong></strong>Security needs to be in the cloud — not just protecting access to your cloud data. Third-party storage of your data and access via the internet each pose their own threats as well. If for some reason those services are interrupted, your access to the data may be lost.</p>
          
           
@@ -172,7 +172,7 @@ theft of or damage to their hardware, software, or electronic data
     <div class="w3-col l4">
       <!-- About Card -->
       <div class="w3-white w3-margin">
-        <img src="/FINALS PROJECT/guy.jpg" alt="Cyber Security Salary" style="width:100%" class="w3-grayscale">
+        <img src="guy.jpg" alt="Cyber Security Salary" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
           <h4</h4>
           <p>Its no secret that cybersecurity jobs often pay very well. In fact, the median base salary of a cybersecurity professional in the U.S. is about $103,000 per year.</p>
